--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
         uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: "1.1.5"
+      - name: Install depepdencies
+        run: poetry install
       - name: Run test
         run: poetry run python test.py
       
