--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@ name: 'Generate Checksum'
 description: Generates a checksum file from a list of glob patterns
 inputs:
   method:
-    description: Hashing algorithm to use
+    description: Hashing algorithm to use [md5, sha1, sha256, sha512]
     required: false
     default: sha256
   output:
