--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,7 @@ jobs:
     name: Push Docker image to container registry
     runs-on: ubuntu-latest
     if: startsWith(github.event.ref, 'refs/tags/v')
+    needs: [lint, test]
     steps:
       - name: Log in to the Container registry
         uses: docker/login-action@v1
