--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,7 @@ inputs:
     required: true
 runs:
   using: docker
-  image: docker://ghcr.io/jmgilman/actions-generate-checksum:latest
+  image: docker://ghcr.io/jmgilman/actions-generate-checksum:v1.0.0
   args:
     - ${{ inputs.method }}
     - ${{ inputs.output }}
