--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,13 +44,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: "3.9"
+          python-version: "3.12"
       - name: Run image
         uses: abatilo/actions-poetry@v2.0.0
         with:
-          poetry-version: "1.1.5"
+          poetry-version: "1.7.1"
       - name: Install depepdencies
-        run: poetry install
+        run: poetry install --only main --no-root
       - name: Run test
         run: poetry run python test.py
   push:
